--- a/requirements.txt
+++ b/requirements.txt
@@ -1,78 +1,32 @@
-asttokens==2.4.1
 blinker==1.7.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
-clarabel==0.6.0
 click==8.1.7
 colorama==0.4.6
-comm==0.2.1
-contourpy==1.0.7
-cvxpy==1.4.2
-cycler==0.11.0
 dash==2.15.0
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
-debugpy==1.8.1
-decorator==5.1.1
-distlib==0.3.8
-ecos==2.0.13
-executing==2.0.1
-filelock==3.13.1
-Flask==3.0.0
-fonttools==4.39.3
+Flask==3.0.2
 gunicorn==21.2.0
 idna==3.6
 importlib-metadata==7.0.1
-ipykernel==6.29.2
-ipython==8.21.0
 itsdangerous==2.1.2
-jedi==0.19.1
-Jinja2==3.1.2
-joblib==1.3.2
-jupyter_client==8.6.0
-jupyter_core==5.7.1
-kiwisolver==1.4.4
-MarkupSafe==2.1.3
-matplotlib==3.7.1
-matplotlib-inline==0.1.6
-mysqlclient==2.2.0
+Jinja2==3.1.3
+MarkupSafe==2.1.5
 nest-asyncio==1.6.0
-numpy==1.24.2
-osqp==0.6.5
+numpy==1.26.4
 packaging==23.2
-pandas==2.1.0
-parso==0.8.3
-Pillow==9.5.0
-platformdirs==4.2.0
+pandas==2.2.0
 plotly==5.18.0
-prompt-toolkit==3.0.43
-psutil==5.9.8
-pure-eval==0.2.2
-pybind11==2.11.1
-Pygments==2.17.2
-pyparsing==3.0.9
-pyportfolioopt==1.5.5
 python-dateutil==2.8.2
-pytz==2023.3.post1
-pywin32==306
-pyzmq==25.1.2
-qdldl==0.1.7.post0
+pytz==2024.1
 requests==2.31.0
 retrying==1.3.4
-scikit-learn==1.3.1
-scipy==1.11.2
-scs==3.2.4.post1
 six==1.16.0
-stack-data==0.6.3
 tenacity==8.2.3
-threadpoolctl==3.2.0
-tornado==6.4
-traitlets==5.14.1
 typing_extensions==4.9.0
-tzdata==2023.3
+tzdata==2023.4
 urllib3==2.2.0
-virtualenv==20.25.0
-wcwidth==0.2.13
 Werkzeug==3.0.1
 zipp==3.17.0
